[maven-release-plugin] prepare release legend-pure-1.6.1

--- a/legend-pure-m2-dsl-diagram/pom.xml
+++ b/legend-pure-m2-dsl-diagram/pom.xml
@@ -19,14 +19,14 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>legend-pure-m2-dsl-diagram</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.6.1</version>
     <name>Legend Pure - Base - M2 DSL Diagram</name>
 
     <build>
