[maven-release-plugin] prepare release legend-pure-1.7.0

--- a/legend-pure-ide-light/pom.xml
+++ b/legend-pure-ide-light/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.6.2-SNAPSHOT</version>
+        <version>1.7.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>legend-pure-ide-light</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.2-SNAPSHOT</version>
+    <version>1.7.0</version>
     <name>Legend Pure - IDE Light</name>
 
     <build>
