--- a/legend-pure-m2-store-relational/pom.xml
+++ b/legend-pure-m2-store-relational/pom.xml
@@ -15,7 +15,8 @@
  limitations under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -26,10 +27,10 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>legend-pure-runtime-java-extension-dsl-diagram</artifactId>
+    <artifactId>legend-pure-m2-store-relational</artifactId>
     <packaging>jar</packaging>
     <version>1.7.2-SNAPSHOT</version>
-    <name>Legend Pure - Runtime - Java Extension - DSL Diagram</name>
+    <name>Legend Pure - Base - M2 Store Relational</name>
 
     <build>
         <plugins>
@@ -45,22 +46,16 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>org.finos.legend.pure.runtime.java.compiled.generation.JavaClassLoaderSourceCodeGenerator</mainClass>
+                    <mainClass>org.finos.legend.pure.m3.bootstrap.generator.M3CoreInstanceGenerator</mainClass>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${project.basedir}/src/main/resources</additionalClasspathElement>
+                    </additionalClasspathElements>
                     <arguments>
-                        <argument>${project.build.directory}/generated-sources/</argument>
-                        <argument />
-                        <argument>Diagram</argument>
+                        <argument>${project.build.directory}/generated-sources/pure/</argument>
+                        <argument>Relational</argument>
+                        <argument>/platform/relational/relational.pure,/platform/relational/relationalMapping.pure</argument>
                     </arguments>
-                    <includeProjectDependencies>true</includeProjectDependencies>
-                    <includePluginDependencies>true</includePluginDependencies>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.finos.legend.pure</groupId>
-                        <artifactId>legend-pure-code-compiled-platform</artifactId>
-                        <version>${project.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -80,18 +75,11 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx4g -Xms4g -XX:MaxPermSize=1024m</argLine>
-                    <useManifestOnlyJar>false</useManifestOnlyJar>
-                    <workingDirectory>${project.parent.basedir}</workingDirectory>
-                </configuration>
-            </plugin>
-         </plugins>
+        </plugins>
     </build>
 
     <dependencies>
+        <!-- project -->
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m4</artifactId>
@@ -101,16 +89,6 @@
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-core</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-m3-dsl-path</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-m3-dsl-graph</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-platform</artifactId>
@@ -118,22 +96,7 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-m2-dsl-diagram</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m2-dsl-mapping</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-m2-store-relational</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-runtime-java-engine-compiled</artifactId>
         </dependency>
 
         <dependency>
@@ -144,5 +107,6 @@
             <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections</artifactId>
         </dependency>
+
     </dependencies>
 </project>
