--- a/legend-pure-maven-compilation-par/pom.xml
+++ b/legend-pure-maven-compilation-par/pom.xml
@@ -92,6 +92,12 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-store-relational</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-configuration-external</artifactId>
         </dependency>
 
