--- a/legend-pure-runtime-java-engine-compiled/pom.xml
+++ b/legend-pure-runtime-java-engine-compiled/pom.xml
@@ -149,6 +149,11 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-store-relational</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-runtime-java-engine-shared</artifactId>
         </dependency>
 
