--- a/legend-pure-runtime-java-extension-external-json/pom.xml
+++ b/legend-pure-runtime-java-extension-external-json/pom.xml
@@ -136,6 +136,11 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-store-relational</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m2-external-json</artifactId>
             <scope>runtime</scope>
         </dependency>
