--- a/legend-pure-m2-store-relational/pom.xml
+++ b/legend-pure-m2-store-relational/pom.xml
@@ -15,21 +15,20 @@
  limitations under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.7.2-SNAPSHOT</version>
+        <version>1.8.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>legend-pure-m2-store-relational</artifactId>
     <packaging>jar</packaging>
-    <version>1.7.2-SNAPSHOT</version>
+    <version>1.8.0</version>
     <name>Legend Pure - Base - M2 Store Relational</name>
 
     <build>
