add legend-pure-m2-store-relational to cod-compiled-core module

--- a/legend-pure-code-compiled-core/pom.xml
+++ b/legend-pure-code-compiled-core/pom.xml
@@ -94,6 +94,12 @@
             <artifactId>legend-pure-m2-dsl-diagram</artifactId>
             <scope>test</scope>
         </dependency>
+	
+	<dependency>
+	    <groupId>org.finos.legend.pure</groupId>
+	    <artifactId>legend-pure-m2-store-relational</artifactId>
+	    <scope>test</scope>
+	</dependency>
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
