--- a/legend-pure-m3-platform/pom.xml
+++ b/legend-pure-m3-platform/pom.xml
@@ -22,14 +22,14 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.10.1-SNAPSHOT</version>
+        <version>1.11.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <name>Legend Pure - Base - M3 Platform</name>
     <artifactId>legend-pure-m3-platform</artifactId>
     <packaging>jar</packaging>
-    <version>1.10.1-SNAPSHOT</version>
+    <version>1.11.0</version>
 
     <build>
         <plugins>
