--- a/legend-pure-code-java-compiled-core/pom.xml
+++ b/legend-pure-code-java-compiled-core/pom.xml
@@ -85,6 +85,12 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-code-compiled-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-dsl-graph</artifactId>
         </dependency>
         <dependency>
