--- a/legend-pure-code-compiled-core/pom.xml
+++ b/legend-pure-code-compiled-core/pom.xml
@@ -15,7 +15,8 @@
  limitations under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -37,11 +38,11 @@
                 <groupId>org.finos.legend.pure</groupId>
                 <artifactId>legend-pure-maven-compilation-par</artifactId>
                 <configuration>
-                    <sourceDirectory>${project.build.outputDirectory}</sourceDirectory>
+                    <sourceDirectory>${project.basedir}/src/main/resources</sourceDirectory>
                     <purePlatformVersion>${project.version}</purePlatformVersion>
-                    <repositories>
-                        <repository>core</repository>
-                    </repositories>
+                    <extraRepositories>
+                        <extraRepository>${project.basedir}/src/main/resources/core.definition.json</extraRepository>
+                    </extraRepositories>
                 </configuration>
                 <executions>
                     <execution>
@@ -51,22 +52,29 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-code-compiled-platform</artifactId>
+                        <version>1.11.1-SNAPSHOT</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
 
     <dependencies>
         <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m3-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-m3-core</artifactId>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-core</artifactId>
@@ -94,12 +102,12 @@
             <artifactId>legend-pure-m2-dsl-diagram</artifactId>
             <scope>test</scope>
         </dependency>
-	
-	<dependency>
-	    <groupId>org.finos.legend.pure</groupId>
-	    <artifactId>legend-pure-m2-store-relational</artifactId>
-	    <scope>test</scope>
-	</dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-store-relational</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
