--- a/legend-pure-code-java-compiled-core/pom.xml
+++ b/legend-pure-code-java-compiled-core/pom.xml
@@ -116,6 +116,7 @@
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-runtime-java-extension-external-json</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
