--- a/legend-pure-ide-light/src/main/web/package.json
+++ b/legend-pure-ide-light/src/main/web/package.json
@@ -16,73 +16,73 @@
     "update": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.1",
-    "@types/lodash": "4.14.165",
-    "@types/node": "14.14.10",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@material-ui/core": "4.11.3",
+    "@types/lodash": "4.14.168",
+    "@types/node": "14.14.31",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.1",
     "@types/react-resize-detector": "5.0.0",
-    "@types/react-select": "3.0.27",
+    "@types/react-select": "4.0.13",
     "@types/react-window": "1.8.2",
     "@types/uuid": "8.3.0",
     "clsx": "1.1.1",
     "history": "5.0.0",
     "http-status-codes": "2.1.4",
-    "lodash": "4.17.20",
-    "mobx": "6.0.4",
-    "mobx-react-lite": "3.1.6",
-    "monaco-editor": "0.21.2",
-    "query-string": "6.13.7",
+    "lodash": "4.17.21",
+    "mobx": "6.1.8",
+    "mobx-react-lite": "3.2.0",
+    "monaco-editor": "0.22.3",
+    "query-string": "6.14.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hotkeys": "2.0.0",
-    "react-icons": "4.1.0",
-    "react-reflex": "3.1.0",
-    "react-resize-detector": "5.2.0",
-    "react-select": "3.1.1",
+    "react-icons": "4.2.0",
+    "react-reflex": "4.0.0",
+    "react-resize-detector": "6.6.1",
+    "react-select": "4.1.0",
     "react-window": "1.8.6",
-    "serializr": "2.0.3",
-    "uuid": "8.3.1",
-    "whatwg-fetch": "3.5.0"
+    "serializr": "2.0.5",
+    "uuid": "8.3.2",
+    "whatwg-fetch": "3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/preset-env": "7.12.7",
-    "@babel/preset-react": "7.12.7",
-    "@babel/preset-typescript": "7.12.7",
+    "@babel/core": "7.13.8",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/preset-env": "7.13.9",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@typescript-eslint/eslint-plugin": "4.9.0",
-    "@typescript-eslint/parser": "4.9.0",
-    "autoprefixer": "10.0.4",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
+    "autoprefixer": "10.2.4",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "chalk": "4.1.0",
     "circular-dependency-plugin": "5.2.2",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "5.0.1",
+    "css-loader": "5.1.1",
     "cssnano": "4.1.10",
-    "eslint": "7.14.0",
+    "eslint": "7.21.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "fork-ts-checker-webpack-plugin": "6.0.4",
-    "html-webpack-plugin": "5.0.0-alpha.14",
-    "mini-css-extract-plugin": "1.3.1",
-    "monaco-editor-webpack-plugin": "2.0.0",
-    "postcss": "8.1.10",
-    "postcss-loader": "4.1.0",
+    "fork-ts-checker-webpack-plugin": "6.1.0",
+    "html-webpack-plugin": "5.2.0",
+    "mini-css-extract-plugin": "1.3.9",
+    "monaco-editor-webpack-plugin": "3.0.0",
+    "postcss": "8.2.6",
+    "postcss-loader": "5.0.0",
     "postcss-scss": "3.0.4",
     "react-refresh": "0.9.0",
-    "resolve": "1.19.0",
-    "sass": "1.29.0",
-    "sass-loader": "10.1.0",
+    "resolve": "1.20.0",
+    "sass": "1.32.8",
+    "sass-loader": "11.0.1",
     "semver": "7.3.4",
     "strip-ansi": "6.0.0",
     "text-table": "0.2.0",
-    "typescript": "4.1.2",
-    "webpack": "5.9.0",
-    "webpack-cli": "4.2.0",
+    "typescript": "4.2.2",
+    "webpack": "5.24.2",
+    "webpack-cli": "4.5.0",
     "webpack-dev-server": "4.0.0-beta.0",
     "wrap-ansi": "7.0.0"
   },
