--- a/legend-pure-configuration-external/pom.xml
+++ b/legend-pure-configuration-external/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.11.1-SNAPSHOT</version>
+        <version>1.12.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>legend-pure-configuration-external</artifactId>
     <packaging>jar</packaging>
-    <version>1.11.1-SNAPSHOT</version>
+    <version>1.12.0</version>
     <name>Legend Pure - Configuration - External</name>
 
     <build>
