XML data format with XSD schema support and updated external data formats framework

--- a/legend-pure-code-java-compiled-core/pom.xml
+++ b/legend-pure-code-java-compiled-core/pom.xml
@@ -49,6 +49,8 @@
                                 <repository>platform</repository>
                                 <repository>core</repository>
                                 <repository>core_relational</repository>
+                                <repository>core_external_shared</repository>
+                                <repository>core_external_format_xml</repository>
                             </repositories>
                         </configuration>
                     </execution>
@@ -67,6 +69,16 @@
                     <dependency>
                         <groupId>org.finos.legend.pure</groupId>
                         <artifactId>legend-pure-code-compiled-core-relational</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-code-compiled-core-external-shared</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-code-compiled-core-external-format-xml</artifactId>
                         <version>${project.version}</version>
                     </dependency>
                 </dependencies>
@@ -183,6 +195,16 @@
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-code-compiled-core-relational</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-code-compiled-core-external-shared</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-code-compiled-core-external-format-xml</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
