Fix Pom Version for new merged modules

--- a/legend-pure-m2-store-relational/pom.xml
+++ b/legend-pure-m2-store-relational/pom.xml
@@ -90,14 +90,14 @@
                     <execution>
                         <phase>initialize</phase>
                         <configuration>
-                            <tasks>
+                            <target>
                                 <copy todir="target/antlr">
                                     <fileset dir="../legend-pure-m3-core/src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr" />
                                 </copy>
                                 <copy todir="target/antlr">
                                     <fileset dir="../legend-pure-m4/src/main/antlr4/org/finos/legend/pure/m4/serialization/grammar" />
                                 </copy>
-                            </tasks>
+                            </target>
                         </configuration>
                         <goals>
                             <goal>run</goal>
