--- a/legend-pure-code-java-compiled-core/pom.xml
+++ b/legend-pure-code-java-compiled-core/pom.xml
@@ -49,6 +49,7 @@
                                 <repository>platform</repository>
                                 <repository>core</repository>
                                 <repository>core_relational</repository>
+                                <repository>core_rel_language</repository>
                                 <repository>core_servicestore</repository>
                                 <repository>core_external_shared</repository>
                                 <repository>core_external_format_xml</repository>
@@ -72,6 +73,11 @@
                     <dependency>
                         <groupId>org.finos.legend.pure</groupId>
                         <artifactId>legend-pure-code-compiled-core-relational</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-code-compiled-core-rel-language</artifactId>
                         <version>${project.version}</version>
                     </dependency>
                     <dependency>
