Adding nexus staging plugin

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>legend-pure-test-reports</module>
+
         <module>legend-pure-m4</module>
 
         <module>legend-pure-m3-bootstrap-generator</module>
@@ -73,8 +75,6 @@
         <module>legend-pure-maven-java-compiled</module>
 
         <module>legend-pure-ide-light</module>
-
-        <module>legend-pure-test-reports</module>
     </modules>
 
     <properties>
@@ -111,7 +111,7 @@
         <apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
         <junit.version>4.13.1</junit.version>
         <jacoco.maven.plugin.version>0.8.5</jacoco.maven.plugin.version>
-        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.3.1</maven.javadoc.plugin.version>
         <dropwizard.version>1.3.29</dropwizard.version>
         <dropwizard-swagger.version>1.3.17-1</dropwizard-swagger.version>
         <joda.time.version>2.10.6</joda.time.version>
@@ -173,9 +173,9 @@
                     <version>2.3</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.7</version>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.8</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -272,6 +272,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
