Create new protocol v1_23_0 (#492)
* Create new protocol v1_23_0

* Update copyright year to 2022

* Increase build max memory to avoid OOM errors

* Increase build max memory to avoid OOM errors

* Rebase to add PR #470

* Increase memory once more to try to avoid OOM

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,6 +75,10 @@ jobs:
       - name: Build + Test
         if: (github.repository != 'finos/legend-pure') || (github.ref != 'refs/heads/master')
         run: mvn -B -e install javadoc:javadoc -DargLine="-Xmx2000m"
+        env:
+          MAVEN_OPTS: -Xmx4000m
       - name: Build + Test + Sonar + Maven Deploy
         if: (github.repository == 'finos/legend-pure') && (github.ref == 'refs/heads/master')
         run: mvn -B -e deploy javadoc:javadoc -Psonar -DargLine="-Xmx2000m"
+        env:
+          MAVEN_OPTS: -Xmx4000m
